# DataVisualisationPW_MESA

./: .gitignore  README.md  airbnb_analysis.ipynb  airbnb_analysis.py  airbnb_analysis_notebook.ipynb  data_processing.ipynb  elipipe.ipynb  elipipeline.ipynb  main 2.py  projectdv 2.ipynb  projectdv copia.ipynb  projectdv.ipynb  projectdv_clean.ipynb  projectdv_final.ipynb  pyproject.toml
data/: listings.csv
data/copenhagen/: neighbourhoods_Copenhagen.geojson
data/export/: host_stats.csv  neighbourhood_upi.csv  neighbourhoods_combined.geojson
scripts/: append_nb.py  download_airbnb_data.py
