[project]
name = "datavisualisationpw-mesa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pearsonr>=0.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
